Implemented playfair cipher

--- a/Algorithms/Makefile
+++ b/Algorithms/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -pedantic -std=c11
 
-TARGETS = caesar vigenere
+TARGETS = caesar vigenere playfair
 
 all: $(TARGETS)
 
@@ -10,6 +10,9 @@ caesar: caesar.c
 
 vigenere: vigenere.c
 	$(CC) $(CFLAGS) -o vigenere vigenere.c
+
+playfair: playfair.c
+	$(CC) $(CFLAGS) -o playfair playfair.c
 
 clean:
 	rm -f $(TARGETS)
